--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.5.2",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "styled-components": "^3.4.10",
+    "styled-reset": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
