--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apollo-boost": "^0.1.16",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
     "react-dom": "^16.5.2",
